# amo_wrapper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
core/: __init__.py  amohelper.py  config.py  dependencies.py  logger.py
core/schemes/: __init__.py  base.py  leads.py  pipelines.py  to_table.py
router/: amowebhook.py
service/: operations.py
