[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["number92 <rav.92@list.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
