[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["number92 <rav.92@list.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pandas = "^2.2.3"
fastapi = "^0.115.11"
aiohttp = "^3.11.13"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503"]
exclude = [".git", "__pycache__", "old", "build", "dist", ".venv"]